--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body>
+<body class="body">
     <h1>gshdf</h1>
-    <script src="/main.js"></script>
+    <script src="bundle.js"></script>
+    <!-- <script src="../dist/bundle.js"></script> -->
 </body>
 
 </html>
